# waste-log-api

./: .dockerignore  .env.example  .flake8  Dockerfile-dev  Dockerfile-prod  Dockerfile-tests  README.md  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: af50e9f22322_initial.py
app/: .coverage  auth.py  config.py  exception_handlers.py  exceptions.py  helpers.py  main.py  setup_service.py
app/db/: events.py  session.py
app/models/: team.py  user.py  waste.py
app/routers/: __init__.py  analytics.py  auth.py  teams.py  users.py  waste_log.py
app/schemas/: analytics.py  auth.py  team.py  user.py  waste.py
nginx/: default.conf
tests/: conftest.py  test_api.py  test_users.py
